--- a/index.html
+++ b/index.html
@@ -31,28 +31,14 @@
 
             <button class="icon-btn theme-btn" data-theme-btn="true">
                 <span class="material-symbols-outlined dark" aria-hidden="true">dark_mode</span>
-                <span class="material-symbols-outlined dark" aria-hidden="true">light_mode</span>
+                <span class="material-symbols-outlined light" aria-hidden="true">light_mode</span>
                 <div class="state-layer"></div>
             </button>
 
         </a>
     </header>
 
-    <!-- <p class="display-large">display-large</p>
-    <p class="display-medium">display-medium</p>
-    <p class="display-small">display-small</p>
-    <p class="headline-large">headline-large</p>
-    <p class="headline-medium">headline-medium</p>
-    <p class="headline-small">headline-small</p>
-    <p class="title-large">title-large</p>
-    <p class="title-medium">title-medium</p>
-    <p class="title-small">title-small</p>
-    <p class="body-large">body-large</p>
-    <p class="body-medium">body-medium</p>
-    <p class="body-small">body-small</p>
-    <p class="label-large">label-large</p>
-    <p class="label-medium">label-medium</p>
-    <p class="label-small">label-small</p> -->
+    
     <script src="./js/script.js"></script>
 </body>
 
