--- a/index.html
+++ b/index.html
@@ -28,17 +28,53 @@
         <a href="#" class="logo">
             <img src="./assets/images/Logo_dark.png" alt="Devfolio" class="dark" width="145">
             <img src="./assets/images/Logo_light.png" alt="Devfolio" class="light" width="145">
-
-            <button class="icon-btn theme-btn" data-theme-btn="true">
-                <span class="material-symbols-outlined dark" aria-hidden="true">dark_mode</span>
-                <span class="material-symbols-outlined light" aria-hidden="true">light_mode</span>
-                <div class="state-layer"></div>
-            </button>
-
         </a>
+        <button class="icon-btn theme-btn" data-theme-btn="true">
+            <span class="material-symbols-outlined dark" aria-hidden="true">dark_mode</span>
+            <span class="material-symbols-outlined light" aria-hidden="true">light_mode</span>
+            <div class="state-layer"></div>
+        </button>
     </header>
 
-    
+    <main>
+        <article>
+            <section class="section hero">
+                <div class="container">
+                    <figure class="hero-banner img-holder">
+                        <img src="./assets/images/profile.png" alt="Seth Kimani" width="240" height="240" class="img-cover">
+                    </figure>
+
+                    <div class="hero-content">
+                        <span class="label-large section-subtitle">Software Engineer</span>
+                        <h1 class="display-small">Seth Kimani</h1>
+                        <p class="body-large section-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum autem aliquam iusto! Asperiores, sunt?
+                        </p>
+                        <div class="btn-wrapper">
+                            <a href="mailto:sethkimani99@gmail.com" class="chip">
+                                <span class="material-symbols-outlined" aria-hidden="true">mail</span>
+                                <span class="label-large">sethkimani99@gmail.com</span>
+                                <div class="state-layer"></div>
+                            </a>
+                            <a href="tel:+254719198001" class="chip">
+                                <span class="material-symbols-outlined" aria-hidden="true">call</span>
+                                <span class="label-large">+254 719 198 001</span>
+                                <div class="state-layer"></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <div class="artilce">
+                <div class="about-card">
+                    <h2 class="card-title title-medium">About</h2>
+                </div>
+            </div>
+        </article>
+    </main>
+
+
     <script src="./js/script.js"></script>
 </body>
 
